--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
+  },
+  "dependencies": {
+    "flag-icons": "^6.6.6"
   }
 }
